Fixed the overlapping copyright text.

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -24,9 +24,9 @@ and set margin to 0.*/
   blue and added a border radius to make a smooth rounded edge using 25px and
   overflow will be clipped away. */
   background-color: #5e3c99;
-  max-width: 1000px;
+  max-width: 2000px;
   margin:auto;
-  height: 100vh;
+  height: 150vh;
   border: 2px solid #b2abd2;
   border-radius: 25px;
   overflow:hidden; */ Funny note: THe font for my list is the same as background,
@@ -67,15 +67,18 @@ body { /*  	Bacground-color set it to white; color: set the font of body to
   left: 50px;
 }
 #copyright {
-  position: absolute;
-  width: 1500px;
+  position: relative;
+  padding: 20px;
   text-align: center;
-  bottom: 20px;
+  bottom: 40px;
+
 }
 #webmap-reviews{
   text-align: left;
   font-size: 15px;
   position: relative;
+
+
 }
 /*footer {
   color: #5e3c99;
